<resources>
    <string name="app_name">CallsApp</string>
    <string name="memory2">Memory2</string>
    <string name="memory1">Memory1</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="star">*</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="memory3">Memory3</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="cardinal">#</string>
    <string name="_9">9</string>
    <string name="numberView">TextView</string>
    <string name="call">CALL</string>
    <string name="c">C</string>
    <string name="ok">ok</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
</resources>